cmbios para vista de registro

--- a/src/app/shop/store/store.component.html
+++ b/src/app/shop/store/store.component.html
@@ -6,8 +6,8 @@
     <button class="btn btn-outline-secondary" type="button">Hombre</button>
     <button class="btn btn-outline-secondary" type="button">Mujer</button>
   </form>
-  <a class="navbar-brand">
-    <img src="https://getbootstrap.com/docs/4.3/assets/brand/bootstrap-solid.svg" width="30" height="30" alt="">
+  <a class="navbar-brand text-light">
+    <li class="fa fa-2x fa-cart-arrow-down"></li>
   </a>
 </nav>
 
@@ -58,6 +58,7 @@
         <p>Talla:</p>
         <div class="text-right">
           Agregar al carrito
+          <li class="fa fa-cart-plus"></li>
         </div>
       </div>
     </div>
@@ -70,6 +71,7 @@
         <p>Talla:</p>
         <div class="text-right">
           Agregar al carrito
+          <li class="fa fa-cart-plus"></li>
         </div>
       </div>
     </div>
@@ -82,6 +84,7 @@
         <p>Talla:</p>
         <div class="text-right">
           Agregar al carrito
+          <li class="fa fa-cart-plus"></li>
         </div>
       </div>
     </div>
@@ -94,6 +97,7 @@
         <p>Talla:</p>
         <div class="text-right">
           Agregar al carrito
+          <li class="fa fa-cart-plus"></li>
         </div>
       </div>
     </div>
@@ -106,6 +110,7 @@
         <p>Talla:</p>
         <div class="text-right">
           Agregar al carrito
+          <li class="fa fa-cart-plus"></li>
         </div>
       </div>
     </div>
@@ -118,6 +123,7 @@
         <p>Talla:</p>
         <div class="text-right">
           Agregar al carrito
+          <li class="fa fa-cart-plus"></li>
         </div>
       </div>
     </div>
