--- a/src/app/shop/admin/admin.component.html
+++ b/src/app/shop/admin/admin.component.html
@@ -2,14 +2,14 @@
   <div class=" row align-self-center h-100">
     <div class="col-4  text-center jumbotron  mx-auto my-auto">
      <div >
-       <img src="../../../assets/imagen/users.png" width="200">
+       <img src="../../../assets/imagen/users.png" width="150">
        <hr>
       <form  >
         <input type="text" class="form-control" placeholder="Usuario">
         <br>
         <input type="password" class="form-control" placeholder="contraseña">
         <br>
-        <button class="btn btn-success" >Iniciar sesión</button>
+        <button class="btn btn-outline-success" >Iniciar sesión</button>
       </form>
      </div>
     </div>
